--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header></header>
     <main>
-      <h1>Рецепты</h1>
+      <h1>Рецепты, test</h1>
       <h3>Вот мои любимык(нет) блюда</h3>
       <a href="pizza.html">Pizza</a>
       <p><a href="sishi.html">Sishi</a></p>
