--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Recipes</title>
   </head>
   <body>
@@ -10,7 +11,7 @@
     <main>
       <h1>Рецепты, test</h1>
       <h3>Вот мои любимык(нет) блюда</h3>
-      <a href="pizza.html">Pizza</a>
+      <a class="link" href="pizza.html">Pizza</a>
       <p><a href="sishi.html">Sishi</a></p>
     </main>
     <footer>
