--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <h1>Рецепты, test</h1>
       <h3>Вот мои любимык(нет) блюда</h3>
       <a class="link" href="pizza.html">Pizza</a>
-      <p><a href="sishi.html">Sishi</a></p>
+      <p><a class="link" href="sishi.html">Sishi</a></p>
     </main>
     <footer>
-      <a href="index.html">На главную</a>
+      <a class="link" href="index.html">На главную</a>
     </footer>
   </body>
 </html>
