--- a/sishi.html
+++ b/sishi.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Sishi</title>
   </head>
   <body>
     <header>
       <h1>Привет, это рецепт для суши!</h1>
     </header>
-    <main>
+    <main id="qwe">
       <img src=images/1911_800_520_sake3.jpg alt="Картинка суши">
       <h2>Описание</h2>
       <p>Все оченб просто, рис и рыбка !!</p>
