--- a/hotdog.html
+++ b/hotdog.html
@@ -3,70 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizza</title>
+    <title>Hot Dog</title>
   </head>
   <body>
     <header>
-      <h1>Привет, это рецепт для пиццы!</h1>
+      <h1>Привет, это рецепт хот-дога!</h1>
     </header>
     <main>
       <img
-        src="https://cdn.tokyo-city.ru/goods/1911_800_520_pizza_margarita.jpg"
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Hot_dog_with_mustard.png"
+        alt="Вкусный хот-дог"
       />
       <h2>Описание</h2>
-      <p>Все оченб просто, хлеб, колбаска!!</p>
+      <p>Ничего сложного — булочка, сосиска и немного магии ✨</p>
       <ul>
-        <li>250 г пшеничной муки</li>
-        <li>150 мл воды</li>
-        <li>1 ч. ложка сухих дрожжей</li>
-        <li>1 ч. ложка соли</li>
-        <li>1 ч. ложка сахара</li>
-        <li>2 ст. ложки оливкового масла</li>
-        <li>200 г моцареллы/li></li>
-        <li>150 г томатного соуса</li>
-        <li>100 г сыра пармезан (по желанию)</li>
-        <li>1 ч. ложка орегано</li>
-        <li>Свежие базилик или другие зелёные травы (по желанию)</li>
+        <li>1 длинная булочка для хот-дога</li>
+        <li>1 сосиска или колбаска</li>
+        <li>1 ст. ложка кетчупа</li>
+        <li>1 ст. ложка горчицы</li>
+        <li>1 ст. ложка майонеза (по желанию)</li>
+        <li>Листья салата (по желанию)</li>
+        <li>Жареный лук или огурчики (по вкусу)</li>
+        <li>Сыр — по вкусу</li>
       </ul>
       <section>
         <h3>Рецепт</h3>
         <ol>
-          <li>
-            В тёплой воде растворить сахар и дрожжи, оставить на 10 минут для
-            активации.
-          </li>
-          <li>
-            В глубокой миске смешать муку и соль, добавить дрожжи с водой,
-            оливковое масло и замесить тесто.
-          </li>
-          <li>
-            Вымешивать тесто 5-7 минут до эластичности, затем накрыть полотенцем
-            и оставить на 1-1,5 часа в тёплом месте для подъёма.
-          </li>
-          <li>Нарезать моцареллу и пармезан, если используете.</li>
-          <li>Нарезать колбасу или салями (по желанию).</li>
-          <li>Приготовить томатный соус.</li>
-          <li>Разогреть духовку до 220-250°C.</li>
-          <li>
-            Когда тесто поднимется, выложить его на противень, смазанный маслом
-            или покрытый пергаментной бумагой, и раскатать в круглый или
-            прямоугольный слой.спользуешь слабосоленый лосось, его также
-            нарезать.
-          </li>
-          <li>
-            На тесто равномерно распределить томатный соус, оставив небольшой
-            бортик по краям.
-          </li>
-          <li>Выложить моцареллу и другие ингредиенты по вкусу.</li>
-          <li>
-            Поставить пиццу в разогретую духовку и выпекать 10-15 минут, пока
-            края не станут золотистыми, а сыр не расплавится.
-          </li>
+          <li></li>
         </ol>
       </section>
     </main>
-    <footer>
-      <a href="index.html">На главную</a>
-    </footer>
   </body>
 </html>
