hotdog new photo

--- a/hotdog.html
+++ b/hotdog.html
@@ -11,7 +11,7 @@
     </header>
     <main>
       <img
-        src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Hot_dog_with_mustard.png"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSgaKYj9IQMhQWhTiAT7QwQRbYH93A9hBbbPw&s"
         alt="Вкусный хот-дог"
       />
       <h2>Описание</h2>
