--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h3>Вот мои любимык(нет) блюда</h3>
       <a class="link" href="pizza.html">Pizza</a>
       <p><a class="link" href="sishi.html">Sishi</a></p>
+      <p><a class="link" href="hotdog.html">hotdog</a></p>
     </main>
     <footer>
       <a class="link" href="index.html">На главную</a>
